--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,50 @@
+**/.ipynb_checkpoints/*
+**/__pycache__/*
+*.pyc
+*.sublime*
+.idea
+.DS_Store
+*.ini
+*.sln
+*.vcxproj*
+**/.vs/*
+x64
+x32
+Debug
+build
+.tags*
+*.psess
+*.vsp
+data
+model
+pkg
+bin
+preprocessing/*.cpp
+preprocessing/*.c
+preprocessing/*.html
+
 *.pyc
 *.pth
 deepmatcher.egg-info/*
 examples/.ipynb_checkpoints/*
 docs/build
+
+
+cmake-build*
+.idea
+CMakeFiles
+Release
+Debug
+TAGS
+GPATH
+GRTAGS
+GTAGS
+
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
